try to fix deploy

--- a/azureml/myenv.yml
+++ b/azureml/myenv.yml
@@ -1,9 +1,10 @@
 name: project_environment
 dependencies:
   - python=3.6.2
+  - tensorflow
+  - scikit-learn
+  - numpy
+  - keras
   - pip:
     - azureml-defaults
-    - scikit-learn
-    - numpy
     - inference-schema[numpy-support]
-    - keras
