--- a/azureml/myenv.yml
+++ b/azureml/myenv.yml
@@ -5,6 +5,7 @@ dependencies:
   - scikit-learn
   - numpy
   - keras
+  - Pillow
   - pip:
     - azureml-defaults
     - inference-schema[numpy-support]
