--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.8.3",
+    "@types/react-lazyload": "^2.6.0",
     "@types/react-router": "^5.1.4",
     "@uifabric/fluent-theme": "^0.16.7",
+    "@uifabric/react-cards": "^0.109.3",
     "@uifabric/react-hooks": "^7.0.1",
     "office-ui-fabric-react": "^6.174.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-lazyload": "^2.6.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.0"
   },
