--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@uifabric/fluent-theme": "^0.16.7",
     "@uifabric/react-cards": "^0.109.3",
     "@uifabric/react-hooks": "^7.0.1",
+    "node-sass": "^4.13.0",
     "office-ui-fabric-react": "^6.174.0",
     "pure-react-carousel": "^1.24.1",
     "react": "^16.8.6",
