--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "pure-react-carousel": "^1.24.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-i18next": "^11.2.7",
     "react-lazyload": "^2.6.5",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
