Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,12 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+- task: AzureCLI@2
+  inputs:
+    azureSubscription: 'Azure Search DEV Service Layer (susudars,kmort,miwelsh,mikaels)(ce1dee05-8cf6-4ad6-990a-9c80868800ba)'
+    scriptType: 'bash'
+    scriptLocation: 'inlineScript'
+    inlineScript: 'echo FOOOOO'
 
 - script: |
     echo Add other tasks to build, test, and deploy your project.
