--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,12 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+- task: AzureCLI@2
+  inputs:
+    azureSubscription: 'MMLSpark Connection'
+    scriptType: 'bash'
+    scriptLocation: 'inlineScript'
+    inlineScript: 'python deploy.py'
 
 - script: |
     echo Add other tasks to build, test, and deploy your project.
