--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,9 +23,6 @@ steps:
     azureSubscription: 'MMLSpark Connection'
     scriptType: 'bash'
     scriptLocation: 'inlineScript'
-    inlineScript: 'pip install -r azureml/requirements.txt && python3 azureml/deploy.py'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+    inlineScript: |
+      pip install -r azureml/requirements.txt
+      python3 azureml/deploy.py
