--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,11 +21,12 @@ steps:
 - task: CondaEnvironment@0
   inputs:
     environmentName: 'azureml-deploy'
-    packageSpecs: 'python=3 azureml-sdk tensorflow keras'
+    packageSpecs: 'python=3'
 - task: AzureCLI@2
   inputs:
     azureSubscription: 'MMLSpark Connection'
     scriptType: 'bash'
     scriptLocation: 'inlineScript'
     inlineScript: |
+      pip install -r azureml/requirements.txt
       python3 azureml/deploy.py
