--- a/azureml/myenv.yml
+++ b/azureml/myenv.yml
@@ -1,7 +1,7 @@
 name: project_environment
 dependencies:
   - python=3.6.2
-  - tensorflow
+  - tensorflow-gpu
   - scikit-learn
   - numpy
   - keras
