--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,4 +36,4 @@ steps:
     inlineScript: |
       pip install
       python3 azureml/deploy.py
-  displayName: Running deploy...
+  displayName: Deploying...
