--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,6 @@ steps:
     scriptType: 'bash'
     scriptLocation: 'inlineScript'
     inlineScript: |
-      pip install
-      python3 azureml/deploy.py
+      cd azureml
+      python3 deploy.py
   displayName: Deploying...
