updated deploy script and added update script and pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,5 +35,5 @@ steps:
     scriptLocation: 'inlineScript'
     inlineScript: |
       cd azureml
-      python3 deploy.py
+      python3 update.py
   displayName: Deploying...
