--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "react-slick": "^0.25.2",
+    "react-transition-group": "^4.3.0",
     "slick-carousel": "^1.8.1",
     "typescript": "3.4.5"
   },
