updated display name for CI/CD pipelin

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,4 +36,4 @@ steps:
     inlineScript: |
       cd azureml
       python3 update.py
-  displayName: Deploying...
+  displayName: Updating service...
