--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,5 +34,5 @@ steps:
     scriptType: 'bash'
     scriptLocation: 'inlineScript'
     inlineScript: |
-      python3 deploy.py
+      python3 azureml/deploy.py
   displayName: Deploying/Updating service...
