--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,12 @@
     "@material-ui/core": "^4.8.3",
     "@types/react-lazyload": "^2.6.0",
     "@types/react-router": "^5.1.4",
+    "@types/react-share": "^3.0.3",
     "@types/react-slick": "^0.23.4",
     "@uifabric/fluent-theme": "^0.16.7",
     "@uifabric/react-cards": "^0.109.3",
     "@uifabric/react-hooks": "^7.0.1",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "office-ui-fabric-react": "^6.174.0",
     "pure-react-carousel": "^1.24.1",
     "react": "^16.8.6",
@@ -20,6 +21,7 @@
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
+    "react-share": "^3.0.1",
     "react-slick": "^0.25.2",
     "react-transition-group": "^4.3.0",
     "slick-carousel": "^1.8.1",
