--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.8.3",
+    "@types/react-helmet": "^5.0.15",
     "@types/react-lazyload": "^2.6.0",
     "@types/react-router": "^5.1.4",
     "@types/react-share": "^3.0.3",
@@ -16,6 +17,7 @@
     "pure-react-carousel": "^1.24.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-i18next": "^11.2.7",
     "react-lazyload": "^2.6.5",
     "react-responsive-carousel": "^3.1.51",
