Preparing for API switch from GET to POST

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "art",
+  "homepage": "https://microsoft.github.io/art/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -37,7 +38,6 @@
     "typescript": "3.4.5"
   },
   "scripts": {
-    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
