--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "art",
+  "homepage": "https://microsoft.github.io/art/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
