updated website to be cleaner with more features

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@microsoft/applicationinsights-web": "^2.3.1",
     "@reach/router": "^1.2.1",
     "@types/reach__router": "^1.2.6",
+    "@types/react-burger-menu": "^2.6.1",
     "@types/react-helmet": "^5.0.15",
     "@types/react-lazyload": "^2.6.0",
     "@types/react-router": "^5.1.4",
@@ -25,9 +26,9 @@
     "pure-react-carousel": "^1.24.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-iframe": "^1.8.0",
     "react-helmet": "^5.2.1",
     "react-i18next": "^11.2.7",
+    "react-iframe": "^1.8.0",
     "react-lazyload": "^2.6.5",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
