--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "office-ui-fabric-react": "^6.174.0",
     "pure-react-carousel": "^1.24.1",
     "react": "^16.8.6",
+    "react-burger-menu": "^2.7.0",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-i18next": "^11.2.7",
@@ -37,6 +38,7 @@
     "react-slick": "^0.25.2",
     "react-transition-group": "^4.3.0",
     "react-with-breakpoints": "^4.0.4",
+    "reactjs-popup": "^1.5.0",
     "slick-carousel": "^1.8.1",
     "typescript": "3.4.5"
   },
