--- a/.github/workflows/master_mosaic-beta.yml
+++ b/.github/workflows/master_mosaic-beta.yml
@@ -22,6 +22,7 @@ jobs:
 
     - name: npm install, build, and test
       run: |
+        cd frontend
         npm install
         npm run build --if-present
         npm run test --if-present
