--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "base64url": "^3.0.1",
     "gh-pages": "^2.2.0",
     "jimp": "^0.9.3",
+    "jpeg-js": ">=0.4.0",
     "node-sass": "^4.14.1",
     "office-ui-fabric-react": "^6.174.0",
     "pure-react-carousel": "^1.24.1",
